# oasm

./: .gitignore  Cargo.toml  EXECUTIVE_FUNCTION_SYSTEM.md  INTEGRATION_PLAN.md  Invoke-Phase1.ps1  MANIFEST_SYSTEM.md  OASM_VISION.md  README.md  folderstructure.txt  ideas.txt
Command BLocks/: Cli Dashboard setup and output format  .txt  PhaseoneCommandBlock.txt
bindings/: Cargo.toml  bindings.rs  build.rs  ffi.rs  native_lib.c
compiler/: Cargo.toml  compiler.yaml
compiler/src/: alignment.rs  audit.rs  cli_dashboard.rs  conditional.rs  constants.rs  cross_asm.rs  diagnostics.rs  directives.rs  expr_eval.rs  expressions.rs  inline_code.rs  labels.rs  lib.rs  macro.rs  multi_pass.rs  optimizer.rs  reloc_viewer.rs  relocation.rs  scanner.rs  storage.rs  structured_consts.rs  symbol_debug.rs
config/: oasm.default.yaml  runtime.yaml
crates/asm-formats/: ARCHITECTURE.md  Cargo.toml
crates/asm-formats/src/: converters.rs  domains.rs  lib.rs  lineage.rs  runtime.rs  schemas.rs  templates.rs
crates/oasm-api/: Cargo.toml
crates/oasm-api/src/: lib.rs
crates/oasm-core/: Cargo.toml
crates/oasm-core/src/: blocks.rs  instructions.rs  lib.rs  macro_processor.rs  modules.rs  rules_legacy.rs  state_evaluator.rs  symbol_table.rs  templates.rs
crates/oasm-core/src/command_blocks/: mod.rs
crates/oasm-core/src/context/: mod.rs
crates/oasm-core/src/executor/: mod.rs
crates/oasm-core/src/parser/: mod.rs
crates/oasm-core/src/rules/: hierarchy.rs  loader.rs  mod.rs  resolver.rs
crates/oasm-core/src/types/: mod.rs
crates/oasm-core/src/validators/: mod.rs  rules_validator.rs  topology_validator.rs  type_validator.rs
crates/oasm-domains/: Cargo.toml  build.rs  build_output.txt  build_output_v2.txt
crates/oasm-domains/src/: bridge.cpp  cad.rs  lib.rs
docs/: COMPLETE_SYSTEM_SUMMARY.md  MODULAR_ARCHITECTURE.md  NATIVE_MODULAR_COMPONENTS.md  governance_rules.md  module_usage.md  ui_integration.md
examples/: cad_gear.oasm  document_report.oasm  engine_scene.oasm  test_module.ps1
logs/: cli_state_schema.json  diagnostic_index_schema.json
logs/DryRunDebug/: diagnostic_index_20251217_163635.json  diagnostic_index_20251217_171314.json
logs/StructureDebug/: baseline_index_20251217_163635.json  baseline_index_20251217_171314.json  cli_state_20251217_163635.json  cli_state_20251217_171314.json
logs/logs/: cli_snapshot.txt  longform.jsonl  longform.log.txt
logs/provenance/: prov_index_1.jsonl  prov_index_10.jsonl  prov_index_100.jsonl  prov_index_1000.jsonl  prov_index_1001.jsonl  prov_index_1002.jsonl  prov_index_1003.jsonl  prov_index_1004.jsonl  prov_index_1005.jsonl  prov_index_1006.jsonl  prov_index_1007.jsonl  prov_index_1008.jsonl  prov_index_1009.jsonl  prov_index_101.jsonl  prov_index_1010.jsonl  prov_index_1011.jsonl  prov_index_1012.jsonl  prov_index_1013.jsonl  prov_index_1014.jsonl  prov_index_1015.jsonl  prov_index_1016.jsonl  prov_index_1017.jsonl  prov_index_1018.jsonl  prov_index_1019.jsonl  prov_index_102.jsonl  prov_index_1020.jsonl  prov_index_1021.jsonl  prov_index_1022.jsonl  prov_index_1023.jsonl  prov_index_1024.jsonl  prov_index_1025.jsonl  prov_index_1026.jsonl  prov_index_1027.jsonl  prov_index_1028.jsonl  prov_index_1029.jsonl  prov_index_103.jsonl  prov_index_1030.jsonl  prov_index_1031.jsonl  prov_index_1032.jsonl  prov_index_1033.jsonl  (+4230 more)
logs/structure/: structure_index.yaml
logs/structure/folders/: ..yaml  bindings.yaml  compiler.yaml  compiler_src.yaml  compiler_src_bin.yaml  config.yaml  crates_oasm-api.yaml  crates_oasm-api_src.yaml  crates_oasm-core.yaml  crates_oasm-core_src.yaml  docs.yaml  examples.yaml  logs.yaml  logs_CompileDebug.yaml  logs_DryRunDebug.yaml  logs_StructureDebug.yaml  manifests.yaml  native_libs_fastmath.yaml  native_libs_pe_emitter_cpp.yaml  runtime_daemon.yaml  runtime_daemon_lineage.yaml  runtime_daemon_src.yaml  runtime_daemon_templates.yaml  runtime_daemon_tests.yaml  schemas.yaml  scripts_PS.yaml  shells_bash.yaml  shells_bash_fonts.yaml  shells_cmd-wrapper_src.yaml  shells_fonts.yaml  shells_fonts_classical.yaml  shells_fonts_creative.yaml  shells_fonts_creative_ComicNeue_comicneue-master.yaml  (+708 more)
manifests/: cratemanifest.yaml  master_manifest.yaml  oasm_manifest.yaml  shell_profile.yaml
native_libs/fastmath/: fastmath.cpp
native_libs/pe_emitter_cpp/: pe_emitter.cpp
runtime/daemon/: Cargo.toml  daemon.yaml
runtime/daemon/src/: asm_repl.rs  bin_inspector.rs  build_logs.rs  ci_cd.rs  commit.rs  cond_profiles.rs  converter.rs  daemon.rs  doc_export.rs  handler.rs  inspector.rs  lib.rs  lineage.rs  linker.rs  linter.rs  main.rs  manifest_loader.rs  parser.rs  plugin_api.rs  profiler.rs  reloc_view.rs  repl.rs  sandbox.rs  simulator.rs  supervisor.rs  toolchains.rs  types.rs  unit_tests.rs  validator.rs  versioning.rs  visualizer.rs  watch.rs  xref.rs
runtime/daemon/templates/: disable_module_ipc_bridge.json  reset_ui_theme.json
runtime/daemon/tests/: integration.rs
schemas/: README.md  oasm.schema.yaml  oasm_protocol.cddl
scripts/: DataCollectionPowershellBlock.txt
scripts/PS/: Get-OasmManifest.ps1  Invoke-OasmScan.ps1
shells/bash/: init.sh  oasm.sh
shells/bash/fonts/: README.md
shells/fonts/: README.md  fonts.json  load_fonts.ps1  load_fonts.sh
shells/oasm-shell/: Cargo.toml
shells/pshell/: pshell.ps1
shells/psmodule/: OASM.PowerShell.psd1  OASM.PowerShell.psm1  README.md
shells/zsh/: init.zsh  oasm.zsh
templates/: README.md
templates/commands/: project_health_check.yaml
templates/scans/: codebase_deep_scan.yaml
templates/schemas/: active_defaults.yaml  instruction_metas.yaml  oasm_instruction_set.yaml  smartobject_container.yaml
templates/scripts/: script_template_generator.yaml
templates/workflows/: cad_automation_preset.yaml
ui/bindings/: Cargo.toml
ui/python_ui_plugins/: pyproject.toml
ui/rust_ui/: Cargo.toml  build.rs  cargo.yaml  rust_ui.yaml
ui/rust_ui/config/: oasm.default.yaml  oasm.schema.yaml  runtime.yaml
ui/rust_ui/manifests/: bindings.yaml
ui/rust_ui/src/: config.rs  main.rs  python_bridge.rs  startup.rs  terminal.rs  validation.rs
(+32 files in other folders)
