[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oasm-scan"
path = "src/bin/oasm-scan.rs"

[dependencies]
runtime_daemon = { path = "../runtime/daemon" }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
serde_cbor = "0.11"
walkdir = "2.4"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
