[package]
name = "compiler"
version = "0.1.0"
edition = "2021"
authors = ["OASM Contributors <contributors@oasm.dev>"]
license = "MIT"
description = "OASM compiler: manifest parsing, validation, lineage tracking, and scanning utilities"

[[bin]]
name = "oasm-scan"
path = "src/bin/oasm-scan.rs"

[[bin]]
name = "oasm-phase1"
path = "src/bin/oasm-phase1.rs"

[dependencies]
runtime_daemon = { path = "../runtime/daemon" }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
walkdir = "2.4"
chrono = "0.4"
sha2 = "0.10"
clap = { version = "4.5", features = ["derive"] }
