[package]
name = "asm-formats"
version = "0.1.0"
edition = "2021"
authors = ["OASM Contributors <contributors@oasm.dev>"]
description = "OASM data format schemas: HDF5, CBOR, YAML, JSON"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_cbor = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"

# HDF5 support (optional until HDF5 library is installed)
hdf5 = { version = "0.8", optional = true }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
hdf5-support = ["hdf5"]
