[package]
name = "oasm-domains"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
oasm-core = { path = "../oasm-core" }
asm-formats = { path = "../asm-formats" }
serde = { workspace = true }
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"

[features]
default = []
occt = []
