[package]
name = "runtime_daemon"
version = "0.1.0"
edition = "2021"

[lib]
name = "runtime_daemon"
path = "src/lib.rs"

[[bin]]
name = "runtime_daemon"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
serde_cbor = "0.11"
chrono = "0.4"
notify = "6.1"
tokio = { version = "1", features = ["full"] }
ctrlc = "3.4"
tempfile = "3.10"
