[package]
name = "rust_ui"
version = "0.1.0"
edition = "2021"
description = "OASM orchestrator: UI + CLI + validation + env bootstrapping"
license = "MIT"

[features]
bindings = []
default = ["bindings"]

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
sha2 = "0.10"
libloading = "0.8"
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"

core_math     = { path = "bin/core_math" }
ipc_bridge    = { path = "bin/ipc_bridge" }
validation    = { path = "bin/validation" }
plugin_loader = { path = "bin/plugin_loader" }
